[tool.poetry]
name = "advent2021"
version = "0.1.0"
description = ""
authors = ["Remi <remi.carton@gmail.com>"]
packages = [
    { include = "advent",  from = "."}
]

[tool.poetry.scripts]
advent = "advent.cli:day"

[tool.poetry.dependencies]
python = "^3.10"
click = "^7.1.2"
pytest = "^6.2.5"

[tool.pylint.basic]
good-names = "c,i,j,f,k,ex,_,df,m,g,pt,p,s,op,n,wp,t,x,a,d,td,y"
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "invalid-name",
    "too-few-public-methods",
    "unsubscriptable-object"
]

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
ipython = "^7.19.0"
mypy = "^0.790"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

